se añadieron las páginas necesarias, así como el linkeo entre las mismas

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="styles/users.css">
+    <link rel="stylesheet" href="styles/profile.css">
     <title>Dashboard println</title>
 </head>
 
@@ -34,7 +34,7 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html"class="active">
+                <a href="users.html">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
@@ -76,7 +76,7 @@
                     </span>
                     <h3>Reportes</h3>
                 </a>
-                <a href="profile.html">
+                <a href="profile.html"class="active">
                     <span class="material-icons-sharp">
                         settings
                     </span>
