--- a/reports.html
+++ b/reports.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="styles/users.css">
+    <link rel="stylesheet" href="styles/reports.css">
     <title>Dashboard println</title>
 </head>
 
@@ -34,7 +34,7 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html"class="active">
+                <a href="users.html">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
@@ -70,7 +70,7 @@
                     </span>
                     <h3>Ordenes</h3>
                 </a>
-                <a href="reports.html">
+                <a href="reports.html"class="active">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
