--- a/analytics.html
+++ b/analytics.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="styles/users.css">
+    <link rel="stylesheet" href="styles/analytics.css">
     <title>Dashboard println</title>
 </head>
 
@@ -34,7 +34,7 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html"class="active">
+                <a href="users.html">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
@@ -46,7 +46,7 @@
                     </span>
                     <h3>Ventas</h3>
                 </a>
-                <a href="analytics.html" >
+                <a href="analytics.html" class="active">
                     <span class="material-icons-sharp">
                         insights
                     </span>
