--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="styles/users.css">
+    <link rel="stylesheet" href="styles/sales.css">
     <title>Dashboard println</title>
 </head>
 
@@ -34,13 +34,13 @@
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html"class="active">
+                <a href="users.html">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
                     <h3>Clientes</h3>
                 </a>
-                <a href="sales.html">
+                <a href="sales.html"class="active">
                     <span class="material-icons-sharp">
                         paid
                     </span>
