se corrigió la indexación y se añadió la página de config

--- a/providers.html
+++ b/providers.html
@@ -70,17 +70,35 @@
                     </span>
                     <h3>Ordenes</h3>
                 </a>
+                <a href="orders.html">
+                    <span class="material-icons-sharp">
+                        brush
+                    </span>
+                    <h3>Custom</h3>
+                </a>
                 <a href="reports.html">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Reportes</h3>
                 </a>
-                <a href="profile.html">
+                <a href="membership.html">
+                    <span class="material-icons-sharp">
+                        loyalty
+                    </span>
+                    <h3>Membresías</h3>
+                </a>
+                <a href="settigs.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Config.</h3>
+                </a>
+                <a href="reviews.html">
+                    <span class="material-icons-sharp">
+                        rate_review
+                    </span>
+                    <h3>Reseñas</h3>
                 </a>
                 <a href="login.html">
                     <span class="material-icons-sharp">
@@ -107,7 +125,7 @@
                 <div class="sales">
                     <div class="status">
                         <div class="info">
-                            <h3>Total Sales</h3>
+                            <h3>Ventas totales</h3>
                             <h1>$65,024</h1>
                         </div>
                         <div class="progresss">
@@ -123,7 +141,7 @@
                 <div class="visits">
                     <div class="status">
                         <div class="info">
-                            <h3>Site Visit</h3>
+                            <h3>Visitas en el sitio</h3>
                             <h1>24,981</h1>
                         </div>
                         <div class="progresss">
@@ -139,7 +157,7 @@
                 <div class="searches">
                     <div class="status">
                         <div class="info">
-                            <h3>Searches</h3>
+                            <h3>Búsquedas</h3>
                             <h1>14,147</h1>
                         </div>
                         <div class="progresss">
@@ -160,18 +178,18 @@
                 <h2>Productos nuevos</h2>
                 <div class="user-list">
                     <div class="user">
-                        <img src="img/profile-1.jpg">
-                        <h2>Playera algodón</h2>
+                        <img src="img/NBA.jpg">
+                        <h2>Playera NBA</h2>
                         <p>50 piezas</p>
                     </div>
                     <div class="user">
-                        <img src="img/profile-3.jpg">
-                        <h2>Playera manga larga</h2>
+                        <img src="img/cuellov.jpg">
+                        <h2>Playera cuello V</h2>
                         <p>105 piezas</p>
                     </div>
                     <div class="user">
-                        <img src="img/profile-4.jpg">
-                        <h2>Camisa cuello polo</h2>
+                        <img src="img/Polo.webp">
+                        <h2>Camisa Polo</h2>
                         <p>44 piezas</p>
                     </div>
                     <div class="user">
@@ -218,17 +236,17 @@
                 <h2>Proveedores</h2>
                 <div class="user-list">
                     <div class="user">
-                        <img src="img/profile-1.jpg">
+                        <img src="img/images.jpeg">
                         <h2>tela</h2>
                         <p>4492332876</p>
                     </div>
                     <div class="user">
-                        <img src="img/profile-3.jpg">
+                        <img src="img/91y0owIpxMS.jpg">
                         <h2>Pintura</h2>
                         <p>4492332876</p>
                     </div>
                     <div class="user">
-                        <img src="img/profile-4.jpg">
+                        <img src="img/images (1).jpeg">
                         <h2>diseñador</h2>
                         <p>4492332876</p>
                     </div>
@@ -288,11 +306,13 @@
 
                 <div class="profile">
                     <div class="info">
-                        <p>Hey, <b>Mayabi</b></p>
+                        <p>Hey, <a href="profile.html"><b>Mayabi</b></a></p>
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="img/profile-3.jpg">
+                        <a href="profile.html">
+                            <img src="img/Mayabi.jpg">
+                        </a>
                     </div>
                 </div>
 
@@ -309,7 +329,7 @@
 
             <div class="reminders">
                 <div class="header">
-                    <h2>Reminders</h2>
+                    <h2>Recordatorios</h2>
                     <span class="material-icons-sharp">
                         notifications_none
                     </span>
@@ -323,7 +343,7 @@
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Workshop</h3>
+                            <h3>Taller</h3>
                             <small class="text_muted">
                                 08:00 AM - 12:00 PM
                             </small>
@@ -342,7 +362,7 @@
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Workshop</h3>
+                            <h3>Taller</h3>
                             <small class="text_muted">
                                 08:00 AM - 12:00 PM
                             </small>
@@ -358,7 +378,7 @@
                         <span class="material-icons-sharp">
                             add
                         </span>
-                        <h3>Add Reminder</h3>
+                        <h3>Añadir recordatorio</h3>
                     </div>
                 </div>
 
@@ -369,8 +389,9 @@
 
     </div>
 
-    <script src="orders.js"></script>
-    <script src="index.js"></script>
+    <script src="javascript/orders.js"></script>
+    <script src="javascript/index.js"></script>
+    
 </body>
 
 </html>
