--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="styles/analytics.css">
+    <link rel="stylesheet" href="styles/settings.css">
     <title>Dashboard println</title>
 </head>
 
@@ -46,7 +46,7 @@
                     </span>
                     <h3>Ventas</h3>
                 </a>
-                <a href="analytics.html" class="active">
+                <a href="analytics.html" >
                     <span class="material-icons-sharp">
                         insights
                     </span>
@@ -88,7 +88,7 @@
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                <a href="settigs.html">
+                <a href="settigs.html"class="active">
                     <span class="material-icons-sharp">
                         settings
                     </span>
