--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="toggle">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="img/logo.jpg.jpeg">
+                        <img src="img/logo.jpeg">
                     </a>
                 </div>
                 <div class="close" id="close-btn">
@@ -321,7 +321,7 @@
 
             <div class="user-profile">
                 <div class="logo">
-                    <img src="img/logo.jpg.jpeg">
+                    <img src="img/logo.jpeg">
                     <h2>println</h2>
                     <p>Fullstack Web Developer</p>
                 </div>
