--- a/analytics.html
+++ b/analytics.html
@@ -17,7 +17,7 @@
             <div class="toggle">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="img/logo.jpg.jpeg">
+                        <img src="img/logo.jpeg">
                     </a>
                 </div>
                 <div class="close" id="close-btn">
@@ -424,7 +424,7 @@
 
             <div class="user-profile">
                 <div class="logo">
-                    <img src="img/logo.jpg.jpeg">
+                    <img src="img/logo.jpeg">
                     <h2>println</h2>
                     <p>Fullstack Web Developer</p>
                 </div>
@@ -567,7 +567,7 @@
 
     </div>
 
-    <script src="javascript/orders.js"></script>
+    <!--<script src="javascript/orders.js"></script>-->
     <script src="javascript/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
