--- a/employees.html
+++ b/employees.html
@@ -77,11 +77,11 @@
                     </span>
                     <h3>Custom</h3>
                 </a>
-                <a href="reports.html">
+                <a href="employees.html" class="active">
                     <span class="material-icons-sharp">
-                        report_gmailerrorred
+                        group
                     </span>
-                    <h3>Reportes</h3>
+                    <h3>empleados</h3>
                 </a>
                 <a href="membership.html">
                     <span class="material-icons-sharp">
@@ -89,25 +89,15 @@
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                <a href="settigs.html">
-                    <span class="material-icons-sharp">
-                        settings
-                    </span>
-                    <h3>Config.</h3>
-                </a>
-                <a href="reviews.html"class="active">
+                
+                <a href="reviews.html">
                     <span class="material-icons-sharp">
                         rate_review
                     </span>
                     <h3>Reseñas</h3>
                 </a>
+                
                 <a href="login.html">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
-                    <h3>Nuevo Login</h3>
-                </a>
-                <a href="#">
                     <span class="material-icons-sharp">
                         logout
                     </span>
