--- a/custom.html
+++ b/custom.html
@@ -70,17 +70,17 @@
                     </span>
                     <h3>Ordenes</h3>
                 </a>
-                <a href="custom.html"class="active">
+                <a href="custom.html" class="active">
                     <span class="material-icons-sharp">
                         brush
                     </span>
                     <h3>Custom</h3>
                 </a>
-                <a href="reports.html">
+                <a href="employees.html">
                     <span class="material-icons-sharp">
-                        report_gmailerrorred
+                        group
                     </span>
-                    <h3>Reportes</h3>
+                    <h3>empleados</h3>
                 </a>
                 <a href="membership.html">
                     <span class="material-icons-sharp">
@@ -88,25 +88,15 @@
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                <a href="settigs.html">
-                    <span class="material-icons-sharp">
-                        settings
-                    </span>
-                    <h3>Config.</h3>
-                </a>
+                
                 <a href="reviews.html">
                     <span class="material-icons-sharp">
                         rate_review
                     </span>
                     <h3>Reseñas</h3>
                 </a>
+                
                 <a href="login.html">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
-                    <h3>Nuevo Login</h3>
-                </a>
-                <a href="#">
                     <span class="material-icons-sharp">
                         logout
                     </span>
