--- a/membership.html
+++ b/membership.html
@@ -17,7 +17,7 @@
             <div class="toggle">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="img/logo.jpg.jpeg">
+                        <img src="img/logo.jpeg">
                     </a>
                 </div>
                 <div class="close" id="close-btn">
@@ -76,37 +76,27 @@
                     </span>
                     <h3>Custom</h3>
                 </a>
-                <a href="reports.html">
+                <a href="employees.html">
                     <span class="material-icons-sharp">
-                        report_gmailerrorred
+                        group
                     </span>
-                    <h3>Reportes</h3>
+                    <h3>empleados</h3>
                 </a>
-                <a href="membership.html"class="active">
+                <a href="membership.html" class="active">
                     <span class="material-icons-sharp">
                         loyalty
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                <a href="settigs.html">
-                    <span class="material-icons-sharp">
-                        settings
-                    </span>
-                    <h3>Config.</h3>
-                </a>
+                
                 <a href="reviews.html">
                     <span class="material-icons-sharp">
                         rate_review
                     </span>
                     <h3>Reseñas</h3>
                 </a>
+                
                 <a href="login.html">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
-                    <h3>Nuevo Login</h3>
-                </a>
-                <a href="#">
                     <span class="material-icons-sharp">
                         logout
                     </span>
