--- a/sales.html
+++ b/sales.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="sidebar">
-                <a href="index.html" class="active">
+                <a href="index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -39,7 +39,7 @@
                     </span>
                     <h3>Clientes</h3>
                 </a>
-                <a href="sales.html">
+                <a href="sales.html" class="active">
                     <span class="material-icons-sharp">
                         paid
                     </span>
@@ -75,11 +75,11 @@
                     </span>
                     <h3>Custom</h3>
                 </a>
-                <a href="reports.html">
+                <a href="employees.html">
                     <span class="material-icons-sharp">
-                        report_gmailerrorred
+                        group
                     </span>
-                    <h3>Reportes</h3>
+                    <h3>empleados</h3>
                 </a>
                 <a href="membership.html">
                     <span class="material-icons-sharp">
@@ -87,25 +87,15 @@
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                <a href="settings.html">
-                    <span class="material-icons-sharp">
-                        settings
-                    </span>
-                    <h3>Config.</h3>
-                </a>
+                
                 <a href="reviews.html">
                     <span class="material-icons-sharp">
                         rate_review
                     </span>
                     <h3>Reseñas</h3>
                 </a>
+                
                 <a href="login.html">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
-                    <h3>Nuevo Login</h3>
-                </a>
-                <a href="#">
                     <span class="material-icons-sharp">
                         logout
                     </span>
