bitacora de movimientos

--- a/providers.html
+++ b/providers.html
@@ -98,7 +98,12 @@
                     </span>
                     <h3>Reseñas</h3>
                 </a>
-                
+                <a href="bitacora.html">
+                    <span class="material-icons-sharp">
+                        book
+                    </span>
+                    <h3>Bitácora</h3>
+                </a>
                 <a href="login.html">
                     <span class="material-icons-sharp">
                         logout
