--- a/sales.html
+++ b/sales.html
@@ -87,7 +87,12 @@
                     </span>
                     <h3>Membresías</h3>
                 </a>
-                
+                <a href="bitacora.html">
+                  <span class="material-icons-sharp">
+                      book
+                  </span>
+                  <h3>Bitácora</h3>
+              </a>
                 <a href="reviews.html">
                     <span class="material-icons-sharp">
                         rate_review
