--- a/reviews.html
+++ b/reviews.html
@@ -155,7 +155,7 @@
                         <h2 id="productModalLabelCustom">Nombre del Producto</h2>
                         <img id="productImageCustom" src="" alt="Imagen del Producto" class="img-fluid">
                         <p id="productDescriptionCustom">Descripción del Producto</p>
-                        <p id="productRatingCustom">Valoración: ★★★★☆</p>
+                        <p id="productRatingCustom"><b>Valoración:</b> ★★★★☆</p>
                         <button class="btn-custom" onclick="showReviews('malayerba-reviews')">Ver reseñas</button>
                     </div>
                 </div>
