--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </span>
                     <h3>Proveedores</h3>
                 </a>
-                <a href="ordenes.html">
+                <a href="orders.html">
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
