--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de administración Println</title>
     <link rel="stylesheet" href="styles/login.css">
+ 
 </head>
 <body>
     <div class="background-image"></div>
@@ -18,7 +19,7 @@
                     <form action="#" method="post" name="login" id="login-form" onsubmit="return validateForm()">
                         <fieldset class="input">
                             <p id="login-advice">
-                                <label for="modlgn_username">Esta página es exclusiva para los usuarios administradores.</label>
+                                <label for="modlgn_username">Esta página es exclusiva para el personal de Println.</label>
                             </p>
                             <p id="login-form-username">
                                 <label for="modlgn_username">Ingrese su correo:</label>
@@ -49,6 +50,28 @@
         </div>
     </div>
 
+    <div id="errorModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeErrorModal()">&times;</span>
+            <p>Error:</p>
+            <p>Acceso denegado. Verifique su correo y contraseña.</p>
+        </div>
+    </div>
+    <div id="welcomeAdminModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeWelcomeAdminModal()">&times;</span>
+            <p>Bienvenido Admin:</p>
+            <p>Has iniciado sesión exitosamente.</p>
+        </div>
+    </div>
+
+    <div id="welcomeEmployeeModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeWelcomeEmployeeModal()">&times;</span>
+            <p>Bienvenido Empleado:</p>
+            <p>Has iniciado sesión exitosamente.</p>
+        </div>
+    </div>
     <script src="/javascript/login.js"></script>
 </body>
 </html>
